Add Early routes and views

--- a/app/views/initial/index.html.erb
+++ b/app/views/initial/index.html.erb
@@ -1,4 +1,5 @@
 <h1>SF Survivor Services</h1>
 
 <p> This will have the form</p>
+<a href="/query/new" class="button small">Get Organizations</a>
 <p>Find me in app/views/initial/index.html.erb</p>
