--- a/app/views/initial/index.html.erb
+++ b/app/views/initial/index.html.erb
@@ -1,24 +1,23 @@
 <h1>SF Survivor Services</h1>
 
 <form>
-  <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="gender" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    GENDER:
-    <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="gender">
-      <li><a href="#">Male</a></li>
-      <li><a href="#">Female</a></li>
-      <li><a href="#">Trans-Male</a></li>
-      <li><a href="#">Trans-Female</a></li>
-    </ul>
+  <div class="col-lg-6">
+    <div class="btn-group">
+      <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">Gender<span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <% @languages.each do |language, value| %>
+            <li><input type="radio" id=<%=language%> value=<%=language%>><label for=<%=language%>><%=language%></label></li>
+          <% end %>
+        </ul>
+    </div>
+
+<!--     <div class="form-group"> -->
+      <label for="age">AGE:</label>
+      <input type="number" class="form-control col-lg-4 id="age">
+    <!-- </div> -->
+    <a href="/query/new" class="button small">Get Organizations</a>
   </div>
-  <div class="form-group">
-  <label for="age">AGE:</label>
-  <input type="number" class="form-control" id="age">
-</div>
 </form>
-<a href="/query/new" class="button small">Get Organizations</a>
 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-heading">Support Services</div>
@@ -34,20 +33,15 @@
     <th>Phone Numbers</th>
     <th>Website</th>
     <th>Email</th>
-
     <tr>
       <td>organization.each do |genders|%>
          genders.gender %></td>
-
       <td>organization.each do |ages|%>
          ages.minimum_age %> through  ages.maximum_age %></td>
-
       <td>organization.each do |languages|%>
          languages.language %></td>
-
       <td>organization.each do |services|%>
          services.service_type %></td>
-
       <td> organization.address %></td>
       <td>organization.each do |phone_number|%>
         <b> phone_number.description%></b>
