--- a/app/views/initial/index.html.erb
+++ b/app/views/initial/index.html.erb
@@ -36,12 +36,11 @@
     <% @organizations.each do |organization| %>
       <td><%= organization["name"] %></td>
       <% organization["genders"].each do|gender| %>
-       <td> <%= p gender %></td>
+       <td> <%= gender %></td>
        <% end %>
-
-      <td><% organization.each do |ages|%>
-        <%= ages["minimum_age"] %> through <%= ages["maximum_age"] %></td>
-      <% end %>
+      <% min_age = organization["age"]["minimum_age"]
+         max_age = organization["age"]["maximum_age"]%>
+      <td><%= min_age %> through <%= max_age %></td>
       <td><% organization.each do |languages|%>
         <%= languages["language"] %></td>
         <%end%>
