--- a/app/views/initial/index.html.erb
+++ b/app/views/initial/index.html.erb
@@ -30,30 +30,28 @@
     <th>Languages Spoken</th>
     <th>Services Provided</th>
     <th>Address</th>
-    <th>Phone Numbers</th>
+    <!-- <th>Phone Numbers</th> -->
     <th>Website</th>
     <th>Email</th>
     <% @organizations.each do |organization| %>
-      <td><%= organization["name"] %></td>
-      <% organization["genders"].each do|gender| %>
-       <td> <%= gender %></td>
-       <% end %>
+      <tr> <td><%= organization["name"] %></td>
+      <td><% organization["genders"].each do|gender| %>
+        <%= gender %>
+      <% end %></td>
       <% min_age = organization["age"]["minimum_age"]
          max_age = organization["age"]["maximum_age"]%>
       <td><%= min_age %> through <%= max_age %></td>
-      <td><% organization.each do |languages|%>
-        <%= languages["language"] %></td>
-        <%end%>
-      <td><% organization.each do |services|%>
-        <%= services["service_type"] %></td>
-        <%end%>
-      <td><%= organization.address %></td>
-      <td><% organization.each do |phone_number|%>
-        <b><%= phone_number["description"]%></b>
-        <%= phone_number["number"]%></td>
+      <td><% organization["languages"].each do |language|%>
+        <%= language %>
         <%end%></td>
-      <td><%= organization.website %></td>
-      <td><%= organization.email %></td>
+      <td><% organization["provided_services"].each do |service|%>
+        <%= service%>
+        <%end%></td>
+      <td><%= organization["address"] %></td>
+      <td><%= organization["website"]%></td>
+      <td><%= organization["email"] %></td>
+
+      </tr>
     <% end %>
   </table>
 </div>
