--- a/app/views/initial/index.html.erb
+++ b/app/views/initial/index.html.erb
@@ -2,23 +2,31 @@
 
 <form class="form-horizontal" role="form">
   <div class="btn-group">
-    <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">Gender<span class="caret"></span></button>
+    <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">Language<span class="caret"></span></button>
       <ul class="dropdown-menu">
         <% @languages.each do |language, value| %>
-          <li><input type="radio" id=<%=language%> value=<%=language%>><label for=<%=language%>><%=language%></label></li>
+          <li><input type="radio" id="language" value=<%=language%>><label for=<%=language%>><%=language%></label></li>
         <% end %>
       </ul>
   </div>
     <div class="form-group">
       <div class="col-md-6">
         <div class="form-group row">
-          <label for="age" class="col-md-1 control-label">AGE:</label>
+          <label for="age" class="col-md-1 control-label">Age:</label>
           <div class="col-md-2">
             <input type="number" class="form-control" id="age">
           </div>
         </div>
       </div>
     </div>
+    <div class="btn-group">
+    <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">Gender:<span class="caret"></span></button>
+      <ul class="dropdown-menu">
+        <% @genders.each do |gender, value| %>
+          <li><input type="radio" id="gender" value=<%=gender%>><label for=<%=gender%>><%=gender%></label></li>
+        <% end %>
+      </ul>
+  </div>
   <!-- </div> -->
   <a href="/query/new" class="button small">Get Organizations</a>
 </form>
