--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -1,21 +1,19 @@
 <h1>SF Survivor Services</h1>
 
-<%= form_for :query, url: query_path do |f|%>
+<%= form_for :request, url: queries_path do |f|%>
   <div class="btn-group">
     <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">Language<span class="caret"></span></button>
       <ul class="dropdown-menu">
         <% @languages.each do |language, value| %>
-          <li><input type="radio" id="language" value=<%=language%>><label for=<%=language%>><%=language%></label></li>
+          <li><%= f.radio_button :language, language%><%=language%></li>
         <% end %>
       </ul>
   </div>
     <div class="form-group">
       <div class="col-md-6">
         <div class="form-group row">
-          <label for="age" class="col-md-1 control-label">Age:</label>
-          <div class="col-md-2">
-            <input type="number" class="form-control" id="age">
-          </div>
+          <%= f.label :age %>
+          <%= f.number_field :age %>
         </div>
       </div>
     </div>
@@ -65,3 +63,4 @@
     <% end %>
   </table>
 </div>
+
