Add email to list

--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -58,7 +58,7 @@
         <%end%></td>
       <td><%= organization["address"] %></td>
       <td><a href=<%= organization["website"]%>> <%= organization["website"]%></a></td>
-      <td><a href=mailto:<%= organization["website"]%>> <%= organization["website"]%></a></td>
+      <td><a href=mailto:<%= organization["email"]%>> <%= organization["email"]%></a></td>
       </tr>
     <% end %>
   </table>
